2006-07-07  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to recent changes in English files.

2006-07-07  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/parse.c (parse_primary_expression): Partially back out patch of
	2006-06-11.  Do not check number of variables passed to a user function
	at the time of parsing - only at time of evaluation.
	Bug #1518553

2006-07-07  Ethan A Merritt <merritt@u.washington.edu>

	* src/help.c (FindHelp): Add missing pair of brackets to disambiguate
	if/if/else syntax.

	* src/command.c (history_command): Fix segfault if re-execution of a
	previous command terminates via int_error().
	Bug #1514453

	* demo/rectangle.dem: Add reset at end, and prompts at 'pause -1'.

	* src/plot2d.c (get_data): HISTOGRAM plot styles must leave a slot for
	all entries, even if they are flagged as DF_MISSING. Otherwise the
	histogram plot elements do not line up properly.

2006-07-06  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc term/*.trm: Remove redundant help keys; i.e. those
	that are distinguished only by one being a short form of the other.
	No change in help or documentation behavior is intended.
	E.g.
	    ?set terminal cgm
	    ?set term cgm         %% delete this one

2006-07-06  Ethan A Merritt <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_linetype EPSLATEX_set_color):
	Keep track of last color and/or linetype set, and filter out
	duplicate requests for the same setting. It remains true that the
	color change command is sent to both the *.eps and *.tex output stream,
	whereas in general only one of the two needs to see it.
	Bug #1517932.

	* tutorial/tutorial.tex tutorial/eg7.plt:  Make the file names
	of the 7th example plot match the other six examples.

2006-07-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (wxtPanel::Draw):
	(wxtPanel::DrawToDC):
	(wxtPanel::OnPaint):